# everythingdoer

./: Cargo.toml  README.md  everythingdoer.bat
arduino/monitor-autorotate/: monitor-autorotate.ino
src/: icon.pdn  main.rs
src/factorial/: 1000.txt  1000000.txt
